[package]
name = "memory-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
rayon = "1.9.0"
windows = { version = "0.54.0", features = [
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemInformation",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Memory"
] }
